--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7 December 1999</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.lionelkiangebeni.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://lionellyon.github.io/lionel_kiangebeni/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+243 816 008 072</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ngaliema, Kinshasa, DRC</span></li>
                 </ul>
